force-app/main/default/objects/Code_Analyzer__c/Code_Analyzer__c.object-meta.xml
<CustomObject>
    <label>Code Analyzer</label>
    <pluralLabel>Code Analyzers</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>