force-app/main/default/objects/Code_Analyzer__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <label>Run Date</label>
    <type>DateTime</type>
</CustomField>