force-app/main/default/objects/Code_Analyzer__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <label>Run Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>