force-app/main/default/objects/Code_Analyzer__c/fields/Total_Files__c.field-meta.xml
<CustomField>
    <fullName>Total_Files__c</fullName>
    <label>Total Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>